# ml-pipeline-framework

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  prompt.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_pipeline.py  setup.py
configs/: automl_config.yaml  explainability_config.yaml  pipeline_config.yaml
deploy/airflow/: airflow_operators.py  dag_generator.py  pipeline_config.yaml
deploy/hadoop/: README.md  batch_submit.sh  job_config.yaml  submit_job.py
deploy/hadoop/scripts/: hadoop_data_processing.py  hadoop_predict.py  hadoop_train.py
deploy/kubernetes/: configmap.yaml  deploy.sh  jobs.yaml  ml-pipeline-app.yaml  mlflow.yaml  namespace.yaml  persistent-volumes.yaml  postgres.yaml  secrets.yaml
deploy/kubernetes/production/: ml-pipeline-deployment.yaml
deploy/production/: deploy.sh  docker-compose.production.yml
deploy/production/monitoring/: alert-rules.yml  prometheus.yml
docker/: entrypoint.sh  healthcheck.py  init-db.sql  log4j.properties  spark-defaults.conf
docs/: README.md  cli_reference.md  deployment.md  installation.md  migration_guide.md  monitoring.md  quick_reference.md  quick_start.md  user_guide.md
docs/api/: data_access.md  index.md  models.md  orchestrator.md  preprocessing.md
docs/configuration/: README.md
docs/features/: automl.md  interpretability.md
notebooks/: demo_credit_fraud_detection.ipynb  engine_comparison.ipynb  test_duckdb_engine.ipynb  test_pandas_engine.ipynb  test_polars_engine.ipynb
scripts/: monitor.py
src/: __version__.py  cli.py  pipeline_orchestrator.py
src/data_access/: base.py  csv_connector.py  csv_profiler.py  factory.py  hive_connector.py  mysql_connector.py  postgres_connector.py  redshift_connector.py  snowflake_connector.py
src/evaluation/: comparison.py  metrics.py  stability.py
src/explainability/: admissible_ml.py  causal.py  compliance.py  concepts.py  fairness_dashboard.py  fraud_explanations.py  interactions.py  interpretability_pipeline.py  pdp_ice.py  prototypes.py  rule_extraction.py  shap_explainer.py  trust_scores.py
src/preprocessing/: feature_elimination.py  imbalance.py  pipeline.py  transformers.py  validator.py
src/utils/: artifacts.py  config_parser.py  config_templates.py  config_validator.py  engine_selector.py  fraud_visualizations.py  logging_config.py  mlflow_tracker.py  notebook_utils.py
tests/: __init__.py  conftest.py  quality_checks.py
tests/integration/: __init__.py  test_end_to_end_pipeline.py  test_spark_integration.py
tests/unit/: __init__.py  test_data_access.py  test_evaluation.py  test_explainability.py  test_models.py  test_pipeline_orchestrator.py  test_preprocessing.py  test_utils.py
